# cmd/swag/docs/swagger.yaml
@@ -1,5 +1,47 @@
 basePath: /v1/2024
 definitions:
+  model.AddPermissionToRoleInput:
+    type: object
+  model.AddRoleToUserInput:
+    type: object
+  model.CheckUserPermissionInput:
+    type: object
+  model.CreatePermissionInput:
+    type: object
+  model.CreatePostInput:
+    properties:
+      content:
+        description: JSON content in string format
+      is_published:
+        type: boolean
+      metadata:
+        description: JSON metadata in string format
+        type: string
+      title:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  model.CreateRoleInput:
+    type: object
+  model.CreateRoom:
+    properties:
+      admin_id:
+        type: integer
+      avatar_url:
+        type: string
+      is_group:
+        type: boolean
+      name:
+        type: string
+    type: object
+  model.LoginInput:
+    properties:
+      user_account:
+        type: string
+      user_password:
+        type: string
+    type: object
   model.RegisterInput:
     properties:
       verify_key:
@@ -8,6 +50,10 @@ definitions:
         type: string
       verify_type:
         type: integer
+    type: object
+  model.RemovePermissionFromRoleInput:
+    type: object
+  model.RemoveRoleFromUserInput:
     type: object
   model.SetupTwoFactorAuthInput:
     properties:
@@ -24,6 +70,22 @@ definitions:
         type: string
       user_token:
         type: string
+    type: object
+  model.UpdatePostInput:
+    properties:
+      content:
+        description: JSON content in string format
+      id:
+        type: integer
+      is_published:
+        type: boolean
+      metadata:
+        description: JSON metadata in string format
+        type: string
+      title:
+        type: string
+      user_id:
+        type: integer
     type: object
   model.VerifyInput:
     properties:
@@ -62,6 +124,311 @@ info:
   title: API Documentation Ecommerce Backend Shopdevgo
   version: 1.0.0
 paths:
+  /chat/createRoom:
+    post:
+      consumes:
+      - application/json
+      description: Create a new room for the user
+      parameters:
+      - description: CreateRoom Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateRoom'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      security:
+      - BearerAuth: []
+      summary: Create a new room
+      tags:
+      - chat management
+  /post/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a post by its ID
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Delete a post
+      tags:
+      - post management
+    patch:
+      consumes:
+      - application/json
+      description: Update a post by its ID
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Updated Post Data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatePostInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Update a post
+      tags:
+      - post management
+  /post/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new post for the user
+      parameters:
+      - description: Post Payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreatePostInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      security:
+      - BearerAuth: []
+      summary: Create a new post
+      tags:
+      - post management
+  /rbac/add_permission_to_role:
+    post:
+      consumes:
+      - application/json
+      description: Assign permission to a role
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddPermissionToRoleInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Add Permission to Role
+      tags:
+      - RBAC management
+  /rbac/add_role_to_user:
+    post:
+      consumes:
+      - application/json
+      description: Assign a role to a user
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddRoleToUserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Add Role to User
+      tags:
+      - RBAC management
+  /rbac/check_user_permission:
+    post:
+      consumes:
+      - application/json
+      description: Check if a user has a specific permission
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.CheckUserPermissionInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Check User Permission
+      tags:
+      - RBAC management
+  /rbac/create_permission:
+    post:
+      consumes:
+      - application/json
+      description: Create a new permission
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreatePermissionInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Create Permission
+      tags:
+      - RBAC management
+  /rbac/create_role:
+    post:
+      consumes:
+      - application/json
+      description: Create a new role
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateRoleInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Create Role
+      tags:
+      - RBAC management
+  /rbac/remove_permission_from_role:
+    post:
+      consumes:
+      - application/json
+      description: Remove permission from a role
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.RemovePermissionFromRoleInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Remove Permission from Role
+      tags:
+      - RBAC management
+  /rbac/remove_role_from_user:
+    post:
+      consumes:
+      - application/json
+      description: Remove a role from a user
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.RemoveRoleFromUserInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Remove Role from User
+      tags:
+      - RBAC management
   /user/login:
     post:
       consumes:
@@ -73,7 +440,7 @@ paths:
         name: payload
         required: true
         schema:
-          $ref: '#/definitions/model.VerifyInput'
+          $ref: '#/definitions/model.LoginInput'
       produces:
       - application/json
       responses:
@@ -197,4 +564,9 @@ paths:
       summary: Verify OTP Login By User
       tags:
       - accounts management
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
