# internal/models/rbac.model.go
@@ -1,0 +1,9 @@
+package model
+
+type CreatePermissionInput struct{}
+type CreateRoleInput struct{}
+type AddPermissionToRoleInput struct{}
+type RemovePermissionFromRoleInput struct{}
+type AddRoleToUserInput struct{}
+type CheckUserPermissionInput struct{}
+type RemoveRoleFromUserInput struct{}
